--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,3 +1,9 @@
-@import "main.scss";
+@import 
+    "./modules/mainer",
+    "./modules/main",
+    "./modules/header",
+    "./modules/main",
+    "./modules/footer",
+    "./modules/aside";
 
 @import "../../node_modules/swiper/swiper-bundle.min.css"
