--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,9 +1,9 @@
 @import 
-    "./modules/mainer",
     "./modules/main",
     "./modules/header",
     "./modules/main",
     "./modules/footer",
-    "./modules/aside";
+    "./modules/aside",
+    "./modules/mainer";
 
 @import "../../node_modules/swiper/swiper-bundle.min.css"
