--- a/src/styles/modules/_footer.scss
+++ b/src/styles/modules/_footer.scss
@@ -1,44 +1,46 @@
-.footer__title {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 1em;
-}
-
-.footer__item {
-    text-align: center;
-    text-decoration: none;
-    font-family: 'TT Lakes';
-    font-weight: 500;
-    color: #7E7E82;
-    margin-bottom: 16px;
-    font-size: 14px;
-    max-width: 320px;
-    transition: color .2s;
-
-    &:hover {
-        color: #41F6D7;
-    }
-
-    &_copy {
-        text-align: left;
-    }
-
-    &_pol {
-        vertical-align: top;
-    }
-
-    &_info {
-        text-align: end;
-    }
-
-    &_info {
-        margin-right: 16px;
-    }
-}
-
 .footer {
     padding-bottom: 20px;
+    min-width: 320px;
+    max-width: 768px;
+
+    &__title {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 1em;
+    }
+
+    &__item {
+        text-align: center;
+        text-decoration: none;
+        font-family: 'TT Lakes';
+        font-weight: 500;
+        color: #7E7E82;
+        margin-bottom: 16px;
+        font-size: 14px;
+        max-width: 320px;
+        transition: color .2s;
+
+        &:hover {
+            color: #41F6D7;
+        }
+
+        &_copy {
+            text-align: left;
+        }
+
+        &_pol {
+            vertical-align: top;
+        }
+
+        &_info {
+            text-align: end;
+        }
+
+        &_info {
+            margin-right: 16px;
+        }
+    }
 
     &__title {
         flex-direction: row;
@@ -50,12 +52,17 @@
     &__item {
         margin: 0 20px;
     }
-}
 
-@media (min-width:1440px) {
-    .footer {
+    @media (min-width:768px) {
+        min-width: 768px;
+        max-width: 1440px;
+
+    }
+
+    @media (min-width:1440px) {
         max-width: 1160px;
         margin: 0 auto;
         padding-left: 280px;
+
     }
 }
