--- a/src/styles/modules/_global.scss
+++ b/src/styles/modules/_global.scss
@@ -2,11 +2,6 @@ body {
     margin: 0;
 }
 
-.main {
-    min-width: 320px;
-    max-width: 768px;
-}
-
 @font-face {
     font-family: 'TT Lakes Condensed';
     src: local('TT Lakes Condensed Bold'), local('TTLakesCondensed-Bold'),
@@ -49,12 +44,10 @@ body {
 
 .chat {
     background-image: url('../assets/img/header_img/chat.svg');
-
 }
 
 .profile {
     background-image: url('../assets/img/header_img/profile.svg');
-
 }
 
 .repair {
@@ -63,29 +56,22 @@ body {
 
 .checkstatus {
     background-image: url('../assets/img/header_img/checkstatus.svg');
-
 }
 
 .close {
     background-image: url('../assets/img/header_img/cancel.svg');
-
 }
 
 .search {
     background-image: url('../assets/img/header_img/search.svg');
-
 }
 
-
-.bottom:not(:last-child) {
-    margin-right: 0;
+.swiper-pagination-bullet {
+    background-color: #B5B6BC;
+    width: 12px;
+    height: 12px;
 }
 
-.item_dis-md,
-.item_dis-lg,
-.title_dis-md {
-    display: none;
-}
 
 .bottom {
     transition: transform 0.3s, opacity 0.3s;
@@ -104,54 +90,4 @@ body {
     &:active {
         transform: scale(0.8);
     }
-}
-
-
-
-@media (min-width:768px) {
-
-    .main {
-        min-width: 768px;
-        max-width: 1440px;
-    }
-
-    .repair {
-        margin-left: 40px;
-    }
-
-
-    .dis-md,
-    .title_dis-md,
-    .swiper-img__subtitle_price--dis-md {
-        display: block;
-    }
-
-}
-
-@media (min-width:1440px) {
-    .main {
-        margin: 0 auto;
-        max-width: 1440px;
-    }
-
-
-    .item_dis-md {
-        display: none;
-    }
-
-    .checkstatus {
-        margin-right: 0;
-    }
-
-    .dis-lg,
-    .item_dis-lg {
-        display: block;
-    }
-
-    .repair::before {
-        content: " ";
-        width: 0;
-    }
-
-
 }
