--- a/src/styles/modules/_header.scss
+++ b/src/styles/modules/_header.scss
@@ -29,6 +29,10 @@
         display: flex;
         align-items: center;
 
+        .header-navigation__title{
+            margin-right: 16px;
+        }
+
         &__logo {
             margin-left: 15px;
 
@@ -56,12 +60,33 @@
             top: 28px;
             right: 130px;
         }
+
+        &__title {
+
+            &--dis-md {
+                display: none;
+            }
+        }
+
+        &__title:not(:last-child){
+            margin-right: 0;
+        }
+
+        &__title:nth-last-child(2){
+            margin-left: 40px;
+        }
     }
 
     @media (min-width:768px) {
         min-width: 768px;
         max-width: 1440px;
 
+        .header-navigation {
+
+            &__title--dis-md {
+                display: block;
+            }
+        }
     }
 
     @media (min-width:1440px) {
