--- a/src/styles/modules/_main.scss
+++ b/src/styles/modules/_main.scss
@@ -1,35 +1,25 @@
+.main {
+    min-width: 320px;
+    max-width: 768px;
 
-
-
-
-
-
-.main__header {
-    background-color: #f8f8f8;
-    padding-top: 24px;
-}
-
-
-
-
-.swiper-pagination-bullet {
-    background-color: #B5B6BC;
-    width: 12px;
-    height: 12px;
-}
-
-///hjkhjkjhkhjkhjkjhkhjkhj
-@media (min-width:1440px) {
-
-
-
-
-    .mainer-page {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
+    .main__header {
+        background-color: #f8f8f8;
+        padding-top: 24px;
     }
 
+    @media (min-width:768px) {
+        min-width: 768px;
+        max-width: 1440px;
+    }
 
+    @media (min-width:1440px) {
+        margin: 0 auto;
+        max-width: 1440px;
 
+        .mainer-page {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+        }
+    }
 }
