--- a/src/styles/modules/mainer-page/_main-page.scss
+++ b/src/styles/modules/mainer-page/_main-page.scss
@@ -15,6 +15,10 @@
         margin-bottom: 10px;
     }
 
+    .main-navigation{
+        display: none;
+    }
+
     @media (min-width:1440px) {
         display: flex;
 
